# fusion360descriptor

./: .gitignore  As-Built Joint.f3d  Cylindrical Joint.f3d  Getting-Started.md  LICENSE.md  README.md  configuration_sample.yaml  pyrightconfig.json
Descriptor/: Descriptor.manifest  Descriptor.py  hi.txt
Descriptor/core/: io.py  manager.py  parser.py  parts.py  transforms.py  ui.py  utils.py
Descriptor/gazebo_package/launch/: gazebo.launch.py  (+1 more)
Descriptor/moveit_package/: CMakeLists.txt  package.xml
Descriptor/moveit_package/launch/: moveit.launch.py  setup_assistant.launch.py
Descriptor/stl_to_obj/: LICENSE.txt  __init__.py  stl_to_obj.py
FullBody_description/meshes/: LL_Ankle_1v4_1.stl  LL_Ankle_2v7_1.stl  LL_Footv1_1.stl  LL_Hip_1v5_1.stl  LL_Hip_2v4_1.stl  LR_Ankle_1v2_1.stl  LR_Ankle_2v3_1.stl  LR_Footv2_2.stl  LR_Hip_1v2_1.stl  LR_Hip_2v3_1.stl  UL_Arm_1v3_1.stl  UL_Arm_2v2_1.stl  UL_Arm_3v2_1.stl  UL_Hand_1v6_1.stl  UL_Shoulder_1v3_1.stl  UL_Shoulder_2v3_1.stl  UL_Shoulder_3v3_1.stl  UL_Wrist_1v6_1.stl  UL_Wrist_2v7_1.stl  UR_Arm_1v2_1.stl  UR_Arm_2v6_1.stl  UR_Arm_3v3_1.stl  UR_Hand_1v3_1.stl  UR_Shoulder_1v3_1.stl  UR_Shoulder_2v2_1.stl  UR_Shoulder_3v2_1.stl  UR_Wrist_1v6_1.stl  UR_Wrist_2v3_1.stl  U_Neck_1v4_1.stl  U_Waist_1v3_1.stl  U_Waist_2v7_1.stl
FullBody_description/urdf/: FullBody.urdf
MeshProcessing/: decimation.py
demoscenes/: Ball Joint.f3d  PinSlot Joint.f3d  Planar Joint.f3d  Sample Joint v3.f3d
docs/: Getting-Started.md  configuration_sample.yaml
fuse2bot/: fuse2bot.py
fuse2bot/core/: io.py  parser.py  parts.py  transforms.py
(+2 files in other folders)
